--- a/frontend/templates/Chat.html
+++ b/frontend/templates/Chat.html
@@ -10,9 +10,7 @@
 <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-           <a href="{{ url_for('profile') }}" class="register-link">👤 My Profile</a>
-           <a href="{{ url_for('dashboard') }}" class="register-link">🔎 Search Alumni</a>
-            <a href="{{ url_for('dashboard') }}" class="register-link">🥳 Events</a>
+          <a href="{{ url_for('admin') }}" class="login-link">Admin Login</a>
 
         </nav>
     </header>
